<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/order"
        android:orderInCategory="100"
        android:title="@string/order"
        android:icon="@drawable/order"
        />

    <item
        android:id="@+id/stoplist"
        android:orderInCategory="200"
        android:icon="@drawable/stoplist"
        android:title="@string/stoplist"
         />
    <item
        android:id="@+id/chat"
        android:orderInCategory="200"
        android:icon="@drawable/chat"
        android:title="@string/chat"
         />
    <item
        android:id="@+id/envanter"
        android:orderInCategory="200"
        android:title="@string/envanter"
         />

</menu>
