<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_gradient"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="230dp">
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/name"
        android:text="@string/clearStopList"
        android:textColor="@color/popupcolor"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:layout_marginTop="10dp"
        android:id="@+id/check"
        android:padding="15dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/popupcolor"
        app:cornerRadius="2dp"
        android:textStyle="bold"
        app:buttonTint="@color/popupcolor"
        android:textSize="15sp"
        android:text="@string/clearCheckCount"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Button
            android:background="@color/red"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/clear"
            android:id="@+id/ok"
            android:layout_marginLeft="30dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp" />
    </LinearLayout>



</LinearLayout>