<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_gradient"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="460dp">
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/name"
        android:textColor="@color/popupcolor"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:id="@+id/turnback"
        android:padding="15dp"
        android:textColor="@color/colorPrimary"
        app:cornerRadius="2dp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/arrow_back"
        android:textSize="20sp"
        android:text="@string/turnbackStopOrdersInTime"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/arrow_back" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:timePickerMode="spinner"
         android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Button
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/save"
            android:id="@+id/ok"
            android:layout_marginLeft="30dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>