<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="240dp"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_gradient"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_horizontal"
        android:text="@string/mealReady"
        android:id="@+id/mealReady"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        app:layout_constraintTop_toBottomOf="@id/mealReady"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="No 1"
        android:textColor="@color/text"
        android:layout_marginLeft="40dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp" />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/badge"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:background="@drawable/badge_circle"
        android:text="2"
        android:layout_marginLeft="40dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/title"
         android:layout_marginLeft="30dp"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@id/badge"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:text="salat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="24dp"

        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" >

    <Button
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginBottom="24dp"
        android:id="@+id/cancel"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp" />


    <Button
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/ready"
        android:id="@+id/ok"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="24dp"
        android:padding="10dp"
         android:layout_marginRight="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    </LinearLayout>

</LinearLayout>